--- a/templates/master-password.html
+++ b/templates/master-password.html
@@ -62,6 +62,7 @@
                             // Handle response here
                             messageDiv.text(response.message).removeClass('alert-danger').addClass('alert alert-success');
                             passwordInput.val(''); // Clear the input on success if necessary
+                            window.location.href = "/fb-auth";
                         },
                         error: function(xhr, status, error) {
                             // Handle errors here
